...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="155dp"
        android:layout_marginBottom="51dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
...
