...

    <!--FireStoreAdapter-->
    <string name="pending_friend_list">pendingFriendList</string>
    <string name="friend_list">friendList</string>

    <!-- Notifications -->
    <string name="goalNotifTitle">Personal Best: Goal Met</string>
    <string name="goalNotifBody">Congrats! You met your goal.</string>

    <!-- Chat -->
    <string name="message_will_appear_here">message will appear here</string>
    <string name="message">message</string>
    <string name="send">send</string>
...
