...
        android:layout_width="411dp"
        android:layout_height="350dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFriBtn" />

    <Button
        android:id="@+id/returnHomeBtn"
        android:layout_width="406dp"
        android:layout_height="65dp"
        android:layout_marginBottom="119dp"
...
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="29dp"
        android:text="@string/add_friend_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/refreshFriendListBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/friendListTitle"
        android:layout_width="70dp"
        android:layout_height="30dp"
...
